ass6/ass6/y.output
Nonterminals useless in grammar

   enumeration_constant
   pointer_opt


Terminals unused in grammar

   STRUCT
   TYPEDEF
   UNION
   SCOMMENT
   MCOMMENT


Rules useless in grammar

  210 enumeration_constant: ID

  211 pointer_opt: pointer
  212            | %empty


State 350 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 primary_expression: ID
    4                   | CONST_INT
    5                   | CONST_FLT
    6                   | CONST_CHAR
    7                   | STRING
    8                   | '(' expression ')'

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' ')'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression '.' ID
   14                   | postfix_expression POINTER ID
   15                   | postfix_expression INCREMENT
   16                   | postfix_expression DECREMENT
   17                   | '(' type_name ')' '{' initializer_list '}'
   18                   | '(' type_name ')' '{' initializer_list ',' '}'

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list ',' assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF '(' type_name ')'

   27 unary_operator: '&'
   28               | '*'
   29               | '+'
   30               | '-'
   31               | '~'
   32               | '!'

   33 cast_expression: unary_expression
   34                | '(' type_name ')' cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression '*' cast_expression
   37                          | multiplicative_expression '/' cast_expression
   38                          | multiplicative_expression '%' cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression '+' multiplicative_expression
   41                    | additive_expression '-' multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFT_SHIFT additive_expression
   44                 | shift_expression RIGHT_SHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression '<' shift_expression
   47                      | relational_expression '>' shift_expression
   48                      | relational_expression LESS_EQUALS shift_expression
   49                      | relational_expression GREATER_EQUALS shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQUALS relational_expression
   52                    | equality_expression NOT_EQUALS relational_expression

   53 AND_expression: equality_expression
   54               | AND_expression '&' equality_expression

   55 exclusive_OR_expression: AND_expression
   56                        | exclusive_OR_expression '^' AND_expression

   57 inclusive_OR_expression: exclusive_OR_expression
   58                        | inclusive_OR_expression '|' exclusive_OR_expression

   59 logical_AND_expression: inclusive_OR_expression
   60                       | logical_AND_expression N AND_OP M inclusive_OR_expression N

   61 logical_OR_expression: logical_AND_expression
   62                      | logical_OR_expression N OR_OP M logical_AND_expression N

   63 conditional_expression: logical_OR_expression
   64                       | logical_OR_expression N '?' M expression N ':' M conditional_expression

   65 assignment_operator: '='
   66                    | MULTIPLY_ASSIGN
   67                    | DIVIDE_ASSIGN
   68                    | MODULO_ASSIGN
   69                    | ADD_ASSIGN
   70                    | SUBTRACT_ASSIGN
   71                    | LEFT_SHIFT_ASSIGN
   72                    | RIGHT_SHIFT_ASSIGN
   73                    | AND_ASSIGN
   74                    | XOR_ASSIGN
   75                    | OR_ASSIGN

   76 assignment_expression: conditional_expression
   77                      | unary_expression assignment_operator assignment_expression

   78 constant_expression: conditional_expression

   79 expression: assignment_expression
   80           | expression ',' assignment_expression

   81 declaration: declaration_specifiers ';'
   82            | declaration_specifiers init_declarator_list ';'

   83 declaration_specifiers: storage_class_specifier declaration_specifiers
   84                       | storage_class_specifier
   85                       | type_specifier
   86                       | type_specifier declaration_specifiers
   87                       | type_qualifier declaration_specifiers
   88                       | function_specifier declaration_specifiers
   89                       | type_qualifier
   90                       | function_specifier

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator
   94                | declarator '=' initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL
  109               | COMPLEX
  110               | IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | %empty

  116 enum_specifier: ENUM ID_opt '{' enumerator_list '}'
  117               | ENUM ID_opt '{' enumerator_list ',' '}'
  118               | ENUM ID

  119 ID_opt: ID
  120       | %empty

  121 enumerator_list: enumerator
  122                | enumerator_list ',' enumerator

  123 enumerator: CONST_ENUM
  124           | CONST_ENUM '=' constant_expression

  125 type_qualifier: CONST
  126               | RESTRICT
  127               | VOLATILE

  128 function_specifier: INLINE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 direct_declarator: ID
  132                  | '(' declarator ')'
  133                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  134                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  135                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  136                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  137                  | direct_declarator '(' parameter_type_list_opt ')'
  138                  | direct_declarator '(' identifier_list ')'

  139 assignment_expression_opt: assignment_expression
  140                          | %empty

  141 type_qualifier_list_opt: type_qualifier_list
  142                        | %empty

  143 pointer: '*'
  144        | '*' type_qualifier_list
  145        | '*' pointer
  146        | '*' type_qualifier_list pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list_opt: parameter_type_list
  150                        | %empty

  151 parameter_type_list: parameter_list
  152                    | parameter_list ',' ELLIPSIS

  153 parameter_list: parameter_declaration
  154               | parameter_list ',' parameter_declaration

  155 parameter_declaration: declaration_specifiers declarator
  156                      | declaration_specifiers

  157 identifier_list: ID
  158                | identifier_list ',' ID

  159 type_name: specifier_qualifier_list

  160 initializer: assignment_expression
  161            | '{' initializer_list '}'
  162            | '{' initializer_list ',' '}'

  163 initializer_list: initializer
  164                 | designation initializer
  165                 | initializer_list ',' initializer
  166                 | initializer_list ',' designation initializer

  167 designation: designator_list '='

  168 designator_list: designator
  169                | designator_list designator

  170 designator: '[' constant_expression ']'
  171           | '.' ID

  172 statement: labeled_statement
  173          | compound_statement
  174          | expression_statement
  175          | selection_statement
  176          | iteration_statement
  177          | jump_statement

  178 labeled_statement: ID ':' statement
  179                  | CASE constant_expression ':' statement
  180                  | DEFAULT ':' statement

  181 compound_statement: '{' '}'
  182                   | '{' block_item_list '}'

  183 block_item_list: block_item
  184                | block_item_list M block_item

  185 block_item: declaration
  186           | statement

  187 expression_statement: expression_opt ';'

  188 expression_opt: expression
  189               | %empty

  190 selection_statement: IF '(' expression N ')' M statement N ELSE M statement N
  191                    | IF '(' expression N ')' M statement N
  192                    | SWITCH '(' expression ')' statement

  193 iteration_statement: WHILE M '(' expression N ')' M statement
  194                    | DO M statement M WHILE '(' expression ')' ';'
  195                    | FOR '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement
  196                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

  197 jump_statement: GOTO_KEYWORD ID ';'
  198               | CONTINUE ';'
  199               | BREAK ';'
  200               | RETURN_KEYWORD ';'
  201               | RETURN_KEYWORD expression ';'

  202 translation_unit: external_declaration
  203                 | translation_unit external_declaration

  204 external_declaration: function_definition
  205                     | declaration

  206 function_definition: declaration_specifiers declarator declaration_list compound_statement
  207                    | declaration_specifiers declarator compound_statement

  208 declaration_list: declaration
  209                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 32
'%' (37) 38
'&' (38) 27 54
'(' (40) 8 11 12 17 18 26 34 132 137 138 190 191 192 193 194 195 196
')' (41) 8 11 12 17 18 26 34 132 137 138 190 191 192 193 194 195 196
'*' (42) 28 36 136 143 144 145 146
'+' (43) 29 40
',' (44) 18 20 80 92 117 122 152 154 158 162 165 166
'-' (45) 30 41
'.' (46) 13 171
'/' (47) 37
':' (58) 64 178 179 180
';' (59) 81 82 187 194 195 196 197 198 199 200 201
'<' (60) 46
'=' (61) 65 94 124 167
'>' (62) 47
'?' (63) 64
'[' (91) 10 133 134 135 136 170
']' (93) 10 133 134 135 136 170
'^' (94) 56
'{' (123) 17 18 116 117 161 162 181 182
'|' (124) 58
'}' (125) 17 18 116 117 161 162 181 182
'~' (126) 31
error (256)
AUTO (258) 97
BREAK (259) 199
CASE (260) 179
CHAR (261) 100
CONST (262) 125
CONTINUE (263) 198
DEFAULT (264) 180
DO (265) 194
DOUBLE (266) 105
ELSE (267) 190
ENUM (268) 116 117 118
EXTERN (269) 95
FLOAT (270) 104
FOR (271) 195 196
GOTO_KEYWORD (272) 197
IF (273) 190 191
INLINE (274) 128
INT (275) 102
LONG (276) 103
REGISTER (277) 98
RESTRICT (278) 126
RETURN_KEYWORD (279) 200 201
SHORT (280) 101
SIGNED (281) 106
SIZEOF (282) 25 26
STATIC (283) 96 134 135
STRUCT (284)
SWITCH (285) 192
TYPEDEF (286)
UNION (287)
UNSIGNED (288) 107
VOID (289) 99
VOLATILE (290) 127
WHILE (291) 193 194
BOOL (292) 108
COMPLEX (293) 109
IMAGINARY (294) 110
POINTER (295) 14
INCREMENT (296) 15 22
DECREMENT (297) 16 23
LEFT_SHIFT (298) 43
RIGHT_SHIFT (299) 44
LESS_EQUALS (300) 48
GREATER_EQUALS (301) 49
EQUALS (302) 51
NOT_EQUALS (303) 52
AND_OP (304) 60
OR_OP (305) 62
ELLIPSIS (306) 152
MULTIPLY_ASSIGN (307) 66
DIVIDE_ASSIGN (308) 67
MODULO_ASSIGN (309) 68
ADD_ASSIGN (310) 69
SUBTRACT_ASSIGN (311) 70
LEFT_SHIFT_ASSIGN (312) 71
RIGHT_SHIFT_ASSIGN (313) 72
AND_ASSIGN (314) 73
XOR_ASSIGN (315) 74
OR_ASSIGN (316) 75
SCOMMENT (317)
MCOMMENT (318)
ID (319) 3 13 14 118 119 131 157 158 171 178 197
CONST_INT (320) 4
CONST_ENUM (321) 123 124
CONST_FLT (322) 5
STRING (323) 7
CONST_CHAR (324) 6


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
M (95)
    on left: 1, on right: 60 62 64 184 190 191 193 194 195
N (96)
    on left: 2, on right: 60 62 64 190 191 193 195
primary_expression (97)
    on left: 3 4 5 6 7 8, on right: 9
postfix_expression (98)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 10 11 12 13 14
    15 16 21
argument_expression_list (99)
    on left: 19 20, on right: 12 20
unary_expression (100)
    on left: 21 22 23 24 25 26, on right: 22 23 25 33 77
unary_operator (101)
    on left: 27 28 29 30 31 32, on right: 24
cast_expression (102)
    on left: 33 34, on right: 24 34 35 36 37 38
multiplicative_expression (103)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (104)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (105)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (106)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (107)
    on left: 50 51 52, on right: 51 52 53 54
AND_expression (108)
    on left: 53 54, on right: 54 55 56
exclusive_OR_expression (109)
    on left: 55 56, on right: 56 57 58
inclusive_OR_expression (110)
    on left: 57 58, on right: 58 59 60
logical_AND_expression (111)
    on left: 59 60, on right: 60 61 62
logical_OR_expression (112)
    on left: 61 62, on right: 62 63 64
conditional_expression (113)
    on left: 63 64, on right: 64 76 78
assignment_operator (114)
    on left: 65 66 67 68 69 70 71 72 73 74 75, on right: 77
assignment_expression (115)
    on left: 76 77, on right: 19 20 77 79 80 134 135 139 160
constant_expression (116)
    on left: 78, on right: 124 170 179
expression (117)
    on left: 79 80, on right: 8 10 64 80 188 190 191 192 193 194 201
declaration (118)
    on left: 81 82, on right: 185 196 205 208 209
declaration_specifiers (119)
    on left: 83 84 85 86 87 88 89 90, on right: 81 82 83 86 87 88 155
    156 206 207
init_declarator_list (120)
    on left: 91 92, on right: 82 92
init_declarator (121)
    on left: 93 94, on right: 91 92
storage_class_specifier (122)
    on left: 95 96 97 98, on right: 83 84
type_specifier (123)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111, on right:
    85 86 112
specifier_qualifier_list (124)
    on left: 112 113, on right: 114 159
specifier_qualifier_list_opt (125)
    on left: 114 115, on right: 112 113
enum_specifier (126)
    on left: 116 117 118, on right: 111
ID_opt (127)
    on left: 119 120, on right: 116 117
enumerator_list (128)
    on left: 121 122, on right: 116 117 122
enumerator (129)
    on left: 123 124, on right: 121 122
type_qualifier (130)
    on left: 125 126 127, on right: 87 89 113 147 148
function_specifier (131)
    on left: 128, on right: 88 90
declarator (132)
    on left: 129 130, on right: 93 94 132 155 206 207
direct_declarator (133)
    on left: 131 132 133 134 135 136 137 138, on right: 129 130 133
    134 135 136 137 138
assignment_expression_opt (134)
    on left: 139 140, on right: 133
type_qualifier_list_opt (135)
    on left: 141 142, on right: 133 134 136
pointer (136)
    on left: 143 144 145 146, on right: 129 145 146
type_qualifier_list (137)
    on left: 147 148, on right: 135 141 144 146 148
parameter_type_list_opt (138)
    on left: 149 150, on right: 137
parameter_type_list (139)
    on left: 151 152, on right: 149
parameter_list (140)
    on left: 153 154, on right: 151 152 154
parameter_declaration (141)
    on left: 155 156, on right: 153 154
identifier_list (142)
    on left: 157 158, on right: 138 158
type_name (143)
    on left: 159, on right: 17 18 26 34
initializer (144)
    on left: 160 161 162, on right: 94 163 164 165 166
initializer_list (145)
    on left: 163 164 165 166, on right: 17 18 161 162 165 166
designation (146)
    on left: 167, on right: 164 166
designator_list (147)
    on left: 168 169, on right: 167 169
designator (148)
    on left: 170 171, on right: 168 169
statement (149)
    on left: 172 173 174 175 176 177, on right: 178 179 180 186 190
    191 192 193 194 195 196
labeled_statement (150)
    on left: 178 179 180, on right: 172
compound_statement (151)
    on left: 181 182, on right: 173 206 207
block_item_list (152)
    on left: 183 184, on right: 182 184
block_item (153)
    on left: 185 186, on right: 183 184
expression_statement (154)
    on left: 187, on right: 174
expression_opt (155)
    on left: 188 189, on right: 187 195 196
selection_statement (156)
    on left: 190 191 192, on right: 175
iteration_statement (157)
    on left: 193 194 195 196, on right: 176
jump_statement (158)
    on left: 197 198 199 200 201, on right: 177
translation_unit (159)
    on left: 202 203, on right: 0 203
external_declaration (160)
    on left: 204 205, on right: 202 203
function_definition (161)
    on left: 206 207, on right: 204
declaration_list (162)
    on left: 208 209, on right: 206 209


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   97 storage_class_specifier: AUTO .

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  100 type_specifier: CHAR .

    $default  reduce using rule 100 (type_specifier)


State 3

  125 type_qualifier: CONST .

    $default  reduce using rule 125 (type_qualifier)


State 4

  105 type_specifier: DOUBLE .

    $default  reduce using rule 105 (type_specifier)


State 5

  116 enum_specifier: ENUM . ID_opt '{' enumerator_list '}'
  117               | ENUM . ID_opt '{' enumerator_list ',' '}'
  118               | ENUM . ID

    ID  shift, and go to state 32

    $default  reduce using rule 120 (ID_opt)

    ID_opt  go to state 33


State 6

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  104 type_specifier: FLOAT .

    $default  reduce using rule 104 (type_specifier)


State 8

  128 function_specifier: INLINE .

    $default  reduce using rule 128 (function_specifier)


State 9

  102 type_specifier: INT .

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: LONG .

    $default  reduce using rule 103 (type_specifier)


State 11

   98 storage_class_specifier: REGISTER .

    $default  reduce using rule 98 (storage_class_specifier)


State 12

  126 type_qualifier: RESTRICT .

    $default  reduce using rule 126 (type_qualifier)


State 13

  101 type_specifier: SHORT .

    $default  reduce using rule 101 (type_specifier)


State 14

  106 type_specifier: SIGNED .

    $default  reduce using rule 106 (type_specifier)


State 15

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  107 type_specifier: UNSIGNED .

    $default  reduce using rule 107 (type_specifier)


State 17

   99 type_specifier: VOID .

    $default  reduce using rule 99 (type_specifier)


State 18

  127 type_qualifier: VOLATILE .

    $default  reduce using rule 127 (type_qualifier)


State 19

  108 type_specifier: BOOL .

    $default  reduce using rule 108 (type_specifier)


State 20

  109 type_specifier: COMPLEX .

    $default  reduce using rule 109 (type_specifier)


State 21

  110 type_specifier: IMAGINARY .

    $default  reduce using rule 110 (type_specifier)


State 22

  205 external_declaration: declaration .

    $default  reduce using rule 205 (external_declaration)


State 23

   81 declaration: declaration_specifiers . ';'
   82            | declaration_specifiers . init_declarator_list ';'
  206 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  207                    | declaration_specifiers . declarator compound_statement

    ID   shift, and go to state 34
    '('  shift, and go to state 35
    '*'  shift, and go to state 36
    ';'  shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   83 declaration_specifiers: storage_class_specifier . declaration_specifiers
   84                       | storage_class_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   85 declaration_specifiers: type_specifier .
   86                       | type_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 27

   87 declaration_specifiers: type_qualifier . declaration_specifiers
   89                       | type_qualifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   88 declaration_specifiers: function_specifier . declaration_specifiers
   90                       | function_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  203 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 47
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  202 translation_unit: external_declaration .

    $default  reduce using rule 202 (translation_unit)


State 31

  204 external_declaration: function_definition .

    $default  reduce using rule 204 (external_declaration)


State 32

  118 enum_specifier: ENUM ID .
  119 ID_opt: ID .

    '{'       reduce using rule 119 (ID_opt)
    $default  reduce using rule 118 (enum_specifier)


State 33

  116 enum_specifier: ENUM ID_opt . '{' enumerator_list '}'
  117               | ENUM ID_opt . '{' enumerator_list ',' '}'

    '{'  shift, and go to state 49


State 34

  131 direct_declarator: ID .

    $default  reduce using rule 131 (direct_declarator)


State 35

  132 direct_declarator: '(' . declarator ')'

    ID   shift, and go to state 34
    '('  shift, and go to state 35
    '*'  shift, and go to state 36

    declarator         go to state 50
    direct_declarator  go to state 41
    pointer            go to state 42


State 36

  143 pointer: '*' .
  144        | '*' . type_qualifier_list
  145        | '*' . pointer
  146        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18
    '*'       shift, and go to state 36

    $default  reduce using rule 143 (pointer)

    type_qualifier       go to state 51
    pointer              go to state 52
    type_qualifier_list  go to state 53


State 37

   81 declaration: declaration_specifiers ';' .

    $default  reduce using rule 81 (declaration)


State 38

   82 declaration: declaration_specifiers init_declarator_list . ';'
   92 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 54
    ';'  shift, and go to state 55


State 39

   91 init_declarator_list: init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


State 40

   93 init_declarator: declarator .
   94                | declarator . '=' initializer
  206 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  207                    | declaration_specifiers declarator . compound_statement

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21
    '{'        shift, and go to state 56
    '='        shift, and go to state 57

    $default  reduce using rule 93 (init_declarator)

    declaration              go to state 58
    declaration_specifiers   go to state 59
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    compound_statement       go to state 60
    declaration_list         go to state 61


State 41

  130 declarator: direct_declarator .
  133 direct_declarator: direct_declarator . '[' type_qualifier_list_opt assignment_expression_opt ']'
  134                  | direct_declarator . '[' STATIC type_qualifier_list_opt assignment_expression ']'
  135                  | direct_declarator . '[' type_qualifier_list STATIC assignment_expression ']'
  136                  | direct_declarator . '[' type_qualifier_list_opt '*' ']'
  137                  | direct_declarator . '(' parameter_type_list_opt ')'
  138                  | direct_declarator . '(' identifier_list ')'

    '('  shift, and go to state 62
    '['  shift, and go to state 63

    $default  reduce using rule 130 (declarator)


State 42

  129 declarator: pointer . direct_declarator

    ID   shift, and go to state 34
    '('  shift, and go to state 35

    direct_declarator  go to state 64


State 43

   83 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 83 (declaration_specifiers)


State 44

   86 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 86 (declaration_specifiers)


State 45

   87 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 87 (declaration_specifiers)


State 46

   88 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 88 (declaration_specifiers)


State 47

    0 $accept: translation_unit $end .

    $default  accept


State 48

  203 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 203 (translation_unit)


State 49

  116 enum_specifier: ENUM ID_opt '{' . enumerator_list '}'
  117               | ENUM ID_opt '{' . enumerator_list ',' '}'

    CONST_ENUM  shift, and go to state 65

    enumerator_list  go to state 66
    enumerator       go to state 67


State 50

  132 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 68


State 51

  147 type_qualifier_list: type_qualifier .

    $default  reduce using rule 147 (type_qualifier_list)


State 52

  145 pointer: '*' pointer .

    $default  reduce using rule 145 (pointer)


State 53

  144 pointer: '*' type_qualifier_list .
  146        | '*' type_qualifier_list . pointer
  148 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18
    '*'       shift, and go to state 36

    $default  reduce using rule 144 (pointer)

    type_qualifier  go to state 69
    pointer         go to state 70


State 54

   92 init_declarator_list: init_declarator_list ',' . init_declarator

    ID   shift, and go to state 34
    '('  shift, and go to state 35
    '*'  shift, and go to state 36

    init_declarator    go to state 71
    declarator         go to state 72
    direct_declarator  go to state 41
    pointer            go to state 42


State 55

   82 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 82 (declaration)


State 56

  181 compound_statement: '{' . '}'
  182                   | '{' . block_item_list '}'
